2004-11-19  Reinhard Max  <max@suse.de>

	*** 8.4.8 TAGGED FOR RELEASE ***

	* unix/installManPage: Classic sed doesn't support | in REs.

	* doc/pack-old.n: Changed the internal name of the man page to
	pack-old to avoid a name clash in the installed man pages.

2004-11-18  Don Porter	<dgp@users.sourceforge.net>

        * changes:      Final updates for Tcl 8.4.8 release.

2004-11-18  Reinhard Max  <max@suse.de>

	* unix/tcl.m4 (SC_CONFIG_MANPAGES): Applied an improved version of
	* unix/configure.in:                patch #996085, that introduces
	* unix/Makefile.in:                 --enable-man-suffix.

	* unix/installManPage:              added
	* unix/mkLinks:                     removed

2004-11-17  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkCanvWind.c (ConfigureWinItem): unmap windows
	immediately when state hidden is requested. [Bug 982248]

	* generic/tkCanvImg.c (ImageToPostscript): don't try ps generation
	of canvas image item without image specified. [Bug 1032300]

	* library/console.tcl (::tk::console::ExpandVariable): correct
	array keyname expansion. [Bug 1004508] (bold)

	* generic/tkPanedWindow.c (Tk_PanedWindowObjCmd): set save_under X
	attr to prevent expose events when moving sash. [Bug 1036963]

2004-11-16  Don Porter	<dgp@users.sourceforge.net>

	* changes:	Updates for Tk 8.4.8 release.

	* library/msgs/it.msg:	Updated Italian message catalog.
	Thanks to Roberto Ugoccioni [Bug 1063675].

2004-11-12  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXXStubs.c: implemented XGetGeometry().

2004-11-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkCmds.c (Tk_TkObjCmd): use correct screen data when
	-displayof arg is passed to [tk scaling]. [Bug 800178]

2004-11-12  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXFont.c (Tk_MeasureChars,Tk_DrawChars,etc): Make
	sure that the lastSubFontPtr remains valid even when the subfont
	array is reallocated. [Bug 618872]
